objects/Trade_Account_Changes_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Account_Changes_Field__c</fullName>
        <label>Trade Account Changes Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Account_Field__c</fullName>
        <label>Trade Account Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Trade Account Changes Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Active__c</columns>
        <columns>Trade_Account_Field__c</columns>
        <columns>Trade_Account_Changes_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Trade Account Changes Fields</pluralLabel>
</CustomObject>